--- a/README.rdoc
+++ b/README.rdoc
@@ -12,3 +12,11 @@ Then fire away:
   Portrait.capture 'http://domain.tocapture.com', '/directory/to/save/to', 'filename.png'
   
 If you provide an invalid URL, or something goes wrong, Portrait will raise an exception
+
+
+= Dependencies
+- httparty
+- open-uri
+- fileutils
+- multi_json
+- multi_xml
